# pybox

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: cd_publish_docs.yml  cd_push_container.yml  ci_tests.yml
docs/: README-seccomp  api.md  apparmor-template  architecture.md  getting-started.md  index.md  install_gvisor.md  seccomp-template.json
pybox/: README.md  __init__.py  api.py  async_executor.py  async_queue.py  config.py  executor.py
pybox/docker/: Dockerfile  runner.py
tests/: test_api.py  test_asyncqueue.py  test_executor.py
